Cleand up code and switched to nil where pointers are used
